--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,5 +16,8 @@ Metrics/BlockLength:
 Metrics/LineLength:
   Max: 200
 
+Style/ClassAndModuleChildren:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
