--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,16 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@0.1.2 
+  ruby: circleci/ruby@0.2.1
 
 jobs:
   build:
-    docker:
-      - image: circleci/ruby:2.6.3-stretch-node
-    executor: ruby/default
+    executor: ruby/2.6.3
     steps:
       - checkout
       - run:
           name: Which bundler?
           command: bundle -v
-      - ruby/bundle-install
-      - run:
-          name: Rspec
-          command: |
-            bundle exec rspec --out test_results/rspec.xml \
-                              --format progress \
-                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
-      - store_test_results:
-          path: test_results
+      - ruby/install-deps
+      - ruby/load-cache
+      - ruby/run-tests
+      - ruby/save-cache
