--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,8 @@ orbs:
 
 jobs:
   build:
-    executor: ruby/2.6.3
+    docker:
+      - image: circleci/ruby:2.6.3-stretch-node
     steps:
       - checkout
       - run:
