circleci configs updated

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,17 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@0.2.1
+  ruby: circleci/ruby@0.2.2
 
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.6.3-stretch-node
+      - image: circleci/ruby:2.6.6
     steps:
       - checkout
       - run:
           name: Which bundler?
           command: bundle -v
-      - ruby/install-deps
       - ruby/load-cache
-      - ruby/run-tests
+      - ruby/install-deps
       - ruby/save-cache
+      - ruby/run-tests
