--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.6.6
+      - image: circleci/ruby:2.6.6-stretch-node
         environment:
           BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
