Added postgres image to circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
         environment:
           BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
+      - image: circleci/postgres:12.2
     steps:
       - checkout
       - run:
