--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
           BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
       - image: circleci/postgres:12.2
+        environment:
+          POSTGRES_DB: airport_test
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: ""
     steps:
       - checkout
       - run:
