--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
         environment:
           POSTGRES_USER: airport
           POSTGRES_DB: airport_test
+          POSTGRES_HOST_AUTH_METHOD: trust
     steps:
       - checkout
       - run:
