--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - image: circleci/ruby:2.6.6-stretch-node
         environment:
           PGHOST: localhost
+          BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
       - image: circleci/postgres:12.2
         environment:
@@ -23,7 +24,7 @@ jobs:
             - airport-bundle-
       - run:
           name: Bundle Install
-          command: bundle check || bundle install --jobs=4 --retry=3
+          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
       - save_cache:
           paths:
             - vendor/bundle
