--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           RAILS_ENV: test
       - image: circleci/postgres:12.2
         environment:
+          POSTGRES_USER: airport
           POSTGRES_DB: airport_test
           POSTGRES_HOST_AUTH_METHOD: trust
     steps:
