--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - image: circleci/ruby:2.6.6-stretch-node
         environment:
           PGHOST: localhost
+          PGUSER: root
           BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
       - image: circleci/postgres:12.2
