--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 cache:
-  - bundler
-  - directories:
+  bundler: true
+  directories:
     - /home/travis/.rvm/
 rvm:
   - 2.6
@@ -10,3 +10,7 @@ services:
 
 before_script:
   - psql -c 'create database airport_test;' -U postgres
+
+script:
+  - bundle exec rubocop
+  - bundle exec rspec
