--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
 language: ruby
-cache:
-  bundler: true
-  directories:
-    - /home/travis/.rvm/
-rvm:
-  - 2.6
-services:
-  - postgresql
+rvm: 2.6
+cache: bundler
+services: postgresql
 
 before_script:
   - psql -c 'create database airport_test;' -U postgres
