--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
           PGHOST: localhost
           PGUSER: root
           BUNDLE_PATH: vendor/bundle
+          BUNDLER_VERSION: 2.1.4
           RAILS_ENV: test
       - image: circleci/postgres:12.2
         environment:
